# chomp

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  chompfile.toml  install.ps1  install.sh  package-lock.json  package.json
.github/workflows/: release.yml  rust.yml  test.yml
.github/workflows/ci/: yaml
chomp-node/: index.js  package-lock.json  package.json
docs/: chompfile.md  cli.md  extensions.md  task.md
node-chomp/: README.md  index.js  package.json
src/: .task.rs.rustfmt  ansi_windows.rs  chompfile.rs  cmd.rs  extensions.rs  http_client.rs  ipfs.rs  js.rs  main.rs  serve.rs  server.rs  task.rs  templates.js  templates.toml  test.svelte  ui.rs  ws.rs
src/engines/: cmd.rs  deno.rs  mod.rs  node.rs
templates/: babel.js  babel.toml  cargo.js  cargo.toml  jspm-generator.toml  jspm.js  jspm.toml  npm.js  npm.toml  prettier.js  prettier.toml  svelte.js  svelte.toml  swc.js  swc.toml  test.js  typescript.toml
test/: app-build.html  app.html  assert.js  babel.js  chompfile.toml  package-lock.json  test-babel.js  test-babel.js.map  test.ts
test/fixtures/many/one/: config.yml
test/fixtures/many/two/: config.yml
test/fixtures/src/: app.ts  dep.ts
test/lib/: all.js  app.ts  app.ts.map  dep.js  dep.js.map  test.js  test.js.map
test/output/: test1.txt  test2.txt  test3.js  test3.js.map  unittest.txt
test/src/: dep.ts  test.ts
test/unit/: ok-node.mjs  testa.js  testb.js
www/: index.html
www/css/: custom-properties.css  style.css
