[package]
name = "chompbuild"
version = "0.2.15"
authors = ["Guy Bedford <guybedford@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/guybedford/chomp/"
homepage = "https://chompbuild.com/"
keywords = ["make", "task", "runner", "javascript", "web"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
readme = "README.md"
description = "Make-like parallel task runner with a JS extension system"

[[bin]]
name = "chomp"
path = "src/main.rs"

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3"
features = ["consoleapi", "errhandlingapi", "fileapi", "handleapi"]

[dependencies]
anyhow = "1"
async-recursion = "1"
capturing-glob = "0"
base64 = "0.21"
clap = "4"
convert_case = "0"
derivative = "2"
dirs = "4"
futures = "0"
hyper = { version = "0", features = ["full"] }
hyper-tls = "0"
lazy_static = "1"
mime_guess = "2"
notify = "4"
num_cpus = "1"
percent-encoding = "2"
regex = "1"
rustls = { version = "0.20", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_v8 = "0.65.0"
sha2 = "0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
toml = "0.5"
uuid = { version = "1", features = ["v4"] }
v8 = "0.51"
warp = "0.3"
directories = "4"
pathdiff = "0"
