[package]
name = "chompbuild"
version = "0.3.0"
authors = ["Guy Bedford <guybedford@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/guybedford/chomp/"
homepage = "https://chompbuild.com/"
keywords = ["make", "task", "runner", "javascript", "web"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
readme = "README.md"
description = "Make-like parallel task runner with a JS extension system"

[[bin]]
name = "chomp"
path = "src/main.rs"

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3"
features = ["consoleapi", "errhandlingapi", "fileapi", "handleapi"]

[dependencies]
anyhow = "1"
async-recursion = "1"
capturing-glob = "0"
base64 = "0.22"
clap = "4"
convert_case = "0.11"
derivative = "2"
dirs = "6"
futures = "0"
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-tls = "0.6"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"
lazy_static = "1"
mime_guess = "2"
notify = "8"
notify-debouncer-mini = "0.7"
num_cpus = "1"
percent-encoding = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_v8 = "0.181.0"
sha2 = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
v8 = "0.89"
warp = { version = "0.4", features = ["server", "websocket"] }
directories = "6"
pathdiff = "0"
